--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,6 +21,11 @@
 		</div>
 		<div class="Links">
 			<h2>Connect with Me</h2>
+				<a href="https://github.com/reillj">
+  					<img src="https://cdn0.iconfinder.com/data/icons/social-media-logos-6-free/32/social_media_logo_github-48.png" alt="Github" style="width:42px;height:42px;border:0">
+				</a>
+				<a href="https://www.linkedin.com/in/jennifer-reilly-91918a144/">
+					<img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-linkedin-square1-128.png" alt="Linkedin" style="width:42px;height:42px;border:0">
 		</div>
 	</body>
 </html>
