--- a/HTML/index.html
+++ b/HTML/index.html
@@ -26,6 +26,9 @@
 				</a>
 				<a href="https://www.linkedin.com/in/jennifer-reilly-91918a144/">
 					<img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-linkedin-square1-128.png" alt="Linkedin" style="width:42px;height:42px;border:0">
+				</a>
+				<a href="https://stackoverflow.com/users/story/8334274#">
+					<img src="https://cdn3.iconfinder.com/data/icons/inficons/128/stackoverflow.png" style="width:42px;height:42px;border:0">
 		</div>
 	</body>
 </html>
