--- a/HTML/index.html
+++ b/HTML/index.html
@@ -35,8 +35,7 @@
 			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/portfolio.html">
 		<h3>Contact</h3>
 			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/contact.html">
-	
-		
-	</body>
+	</div>	
+</body>
 </html>
 
