--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,12 +29,16 @@
 		</div>
 	
 	<div class="Pages">
-		<h3>About</h3>
-			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/index.html">
-		<h3>Portfolio</h3>
-			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/portfolio.html">
-		<h3>Contact</h3>
-			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/contact.html">
+		<a name="About"></a>
+			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/index.html"> About </a>
+		
+		<a name="Portfolio"></a>
+			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/portfolio.html"> Portfolio </a>
+		
+		 <a name="Contact"></a>
+			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/contact.html"> Contact
+			</a>
+
 	</div>	
 </body>
 </html>
