--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -6,26 +6,18 @@
 	<link rel="stylesheet" href="style.css">
 </header>
 <body>
+
+<!-- Logo -->	
 	<div class="Logo">
 		<h1>Jennifer Reilly</h1>
 	</div>
-</body>
-	<div class="Pages">
-		<a name="About"></a>
-			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/index.html"> About </a>
-		
-		<a name="Portfolio"></a>
-			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/portfolio.html"> Portfolio </a>
-		
-		 <a name="Contact"></a>
-			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/contact.html"> Contact
-			</a>
-	</div>	
-</body>
+
+<!-- Portfolio Head -->
 	<div class="Portfolio">
 		<h1>Portfolio</h1>
 	</div>
-	
+</body>
+<!-- Links to Social Networks -->
 	<div class="Links">
 		<h2>Connect with Me</h2>
 			<a href="https://github.com/reillj">
@@ -38,6 +30,19 @@
 				<img src="https://cdn3.iconfinder.com/data/icons/inficons/128/stackoverflow.png" style="width:42px;height:42px;border:0">
 			</a>
 	</div>
-	
+
+<!-- Links to Other Pages on Profile -->
+	<div class="Pages">
+		<a name="About"></a>
+			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/index.html"> About </a>
+		
+		<a name="Portfolio"></a>
+			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/portfolio.html"> Portfolio </a>
+		
+		 <a name="Contact"></a>
+			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/contact.html"> Contact
+			</a>
+	</div>	
+</body>
 </html>
 
