--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,8 @@
 	<title>Basic Portfolio</title>
 	<link rel="stylesheet" href="style.css">
 </header>
+
+<!-- Link to Other Pages on Profile -->
 	<div class="Pages">
 		<a name="About"></a>
 			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/index.html"> About </a>
@@ -16,17 +18,8 @@
 			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/contact.html"> Contact
 			</a>
 	</div>	
-<body>
-	<div class="Logo">
-		<h1>Jennifer Reilly</h1>
-	</div>
-	<div class="About Me">
-		<h1>About Me</h1>
-			<img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/246935_412122962183790_139244597_n.jpg?oh=141626e53d9cfe80e6ad773135c37261&oe=59F4909E"/>
-			<p> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
-			<br>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
-	</div>
-</body>
+
+<!-- Links to Social Networks -->
 	<div class="Links">
 		<h2>Connect with Me</h2>
 			<a href="https://github.com/reillj">
@@ -39,5 +32,21 @@
 				<img src="https://cdn3.iconfinder.com/data/icons/inficons/128/stackoverflow.png" style="width:42px;height:42px;border:0">
 			</a>
 		</div>
+
+<body>
+
+<!-- Logo for Profile -->
+	<div class="Logo">
+		<h1>Jennifer Reilly</h1>
+	</div>
+
+<!-- Information About Me -->	
+	<div class="About Me">
+		<h1>About Me</h1>
+			<img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/246935_412122962183790_139244597_n.jpg?oh=141626e53d9cfe80e6ad773135c37261&oe=59F4909E"/>
+			<p> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
+			<br>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+	</div>
+</body>
 </html>
 
