--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -41,10 +41,15 @@
 		<h1>Contact</h1>
 
 		<!-- Contact Box Info -->
-			<h4>Name</h4>
-			<h4>Email</h4>
-			<h4>Message</h4>
-			<h4>Submit</h4>
+			<form> 
+				Name:<br>
+				<input type="text" name="Name"><br>
+				Email:<br>
+				<input type="text" name="Email"><br>
+				Message:<br>
+				<input type="text" name="Message"><br><br> <input type="submit" value="Submit">
+			</form>
+
 	</div>
 </body>
 
