--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -39,8 +39,9 @@
 <!-- Contact Head -->
 	<div class="Contact">
 		<h1>Contact</h1>
-
-		<!-- Contact Box Info -->
+	</div>
+		<!-- Contact Form -->
+		<div class="form">
 			<form> 
 				Name:<br>
 				<input type="text" name="Name"><br>
@@ -49,8 +50,7 @@
 				Message:<br>
 				<input type="text" name="Message"><br><br> <input type="submit" value="Submit">
 			</form>
-
-	</div>
+		</div>
 </body>
 
 	
