--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,8 +5,9 @@
 	<title>Basic Portfolio</title>
 	<link rel="stylesheet" href="style.css">
 </header>
+<body>
 
-<!-- Link to Other Pages on Profile -->
+<!-- Links to Other Pages on Profile -->
 	<div class="Pages">
 		<a name="About"></a>
 			<a href="file:///C:/ua_bootcamp/Baisc-Portfolio.git/trunk/HTML/index.html"> About </a>
@@ -32,8 +33,6 @@
 				<img src="https://cdn3.iconfinder.com/data/icons/inficons/128/stackoverflow.png" style="width:42px;height:42px;border:0">
 			</a>
 		</div>
-
-<body>
 
 <!-- Logo for Profile -->
 	<div class="Logo">
