--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -47,7 +47,7 @@
 				Name:<br>
 				<input type="text" name="Name"><br>
 				Email:<br>
-				<input type="text" name="Email"><br>
+				<input type="email" name="Email"><br>
 				Message:<br>
 				<input type="text" name="Message"><br><br> <input type="submit" value="Submit">
 			</form>
