--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html>
-<header>
+<html lang="en-us">
+
+<head>
+
 	<meta charset="utf-8">
 	<title>Basic Portfolio</title>
-	<link rel="stylesheet" href="style.css">
-</header>
+	<link rel="stylesheet" type="text/css" href="style.css">
+<style>
+
+body{
+	color: #4aaaa5;
+	font-family: 'Georgia', Times, serif;
+	font-weight: normal;
+	background-color: #ffffff;
+	background-image: "C:\ua_bootcamp\Baisc-Portfolio.git\trunk\Images\bedge_grunge_@2X.png;";
+	}
+
+.Logo{ 
+	width: 275px;
+	height: 75px;
+	border: 1px;
+	color: white;
+	background-color: #4aaaa5;
+	float: left;
+	text-align: center;
+	 }
+
+.Links{
+	font-size: 12px;
+	float: right;
+}
+
+.Pages{
+	float: right;
+	padding: 2cm 4cm 3cm 4cm;
+}
+
+.AboutMe{
+	float: left;
+}
+
+</style>
+</head>
 <body>
 
 <!-- Links to Other Pages on Profile -->
@@ -42,9 +79,11 @@
 <!-- Information About Me -->	
 	<div class="About Me">
 		<h1>About Me</h1>
-			<img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/246935_412122962183790_139244597_n.jpg?oh=141626e53d9cfe80e6ad773135c37261&oe=59F4909E"/>
+			<img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/246935_412122962183790_139244597_n.jpg?oh=141626e53d9cfe80e6ad773135c37261&oe=59F4909E"/ style: width=200px height= 200px>
+
 			<p> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
-			<br>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+			</p>
+			<p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
 	</div>
 </body>
 </html>
