--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,15 +8,19 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 <style>
 
+section{
+	width:650px;
+	float: left;
+}
 body{
 	color: #4aaaa5;
-	font-family: 'Georgia', Times, serif;
 	font-weight: normal;
 	background-color: #ffffff;
 	background-image: "C:\ua_bootcamp\Baisc-Portfolio.git\trunk\Images\bedge_grunge_@2X.png;";
 	}
 
 .Logo{ 
+	padding:10px;
 	width: 275px;
 	height: 75px;
 	border: 1px;
@@ -25,6 +29,20 @@ body{
 	float: left;
 	text-align: center;
 	 }
+
+h1{
+	font-size: 30px;
+	font-family:'Georgia', Times, Times New Roman, serif;
+	;
+}
+.AboutMe{
+	margin-left: auto;
+    width: 300px;
+    border: 3px solid #73AD21;
+    padding: 10px;
+    color: black;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
 
 .Links{
 	font-size: 12px;
@@ -36,14 +54,20 @@ body{
 	padding: 2cm 4cm 3cm 4cm;
 }
 
-.AboutMe{
-	float: left;
+footer{
+	color: white;
+	background-color: #666666;
+	height: 50px;
+	width:960px;
+	text-align: center;
+	position: absolute;
+	bottom: 5px;
 }
 
 </style>
 </head>
 <body>
-
+	
 <!-- Links to Other Pages on Profile -->
 	<div class="Pages">
 		<a name="About"></a>
@@ -75,7 +99,7 @@ body{
 	<div class="Logo">
 		<h1>Jennifer Reilly</h1>
 	</div>
-
+<section>
 <!-- Information About Me -->	
 	<div class="About Me">
 		<h1>About Me</h1>
@@ -84,7 +108,13 @@ body{
 			<p> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
 			</p>
 			<p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+	</section>
 	</div>
+	
+
+	<footer>
+  		<p>@ Copyright 2017 Jennifer Reilly</p>
+	</footer>
 </body>
 </html>
 
