--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -29,6 +29,16 @@ h1{
 	font-family:'Georgia', Times, Times New Roman, serif;
 	}
 
+footer{
+	color: white;
+	background-color: #666666;
+	height: 50px;
+	width:960px;
+	text-align: center;
+	position: absolute;
+	bottom: 5px;
+	}
+
 </style>
 </head>
 	
