--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -29,6 +29,11 @@ h1{
 	font-family:'Georgia', Times, Times New Roman, serif;
 	}
 
+.form{
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color:black;
+}
+
 footer{
 	color: white;
 	background-color: #666666;
